--- a/src/static/css/project_detail.css
+++ b/src/static/css/project_detail.css
@@ -521,6 +521,11 @@ body {
 
 .tab-content {
     padding: 20px 0;
+    display: none;
+}
+
+.tab-content:first-of-type {
+    display: block;
 }
 
 #materialSearch {
