--- a/src/templates/projects.html
+++ b/src/templates/projects.html
@@ -88,7 +88,7 @@
     <div id="createModal" class="modal">
         <div class="modal-content">
             <span id="close-modal" class="close">&times;</span>
-            <h2 style="margin-bottom: 20px;">Create New Project</h2>
+            <h2>Create New Project</h2>
             <form action="/projects" method="POST">
                 <div class="form-group">
                     <label for="name">Project Name</label>
