--- a/src/templates/projects.html
+++ b/src/templates/projects.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects Dashboard</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/projects.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/navbar.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/modals/add_project_modal.css') }}">
+    <script src="{{ url_for('static', filename='js/navbar.js') }}"></script>
     <script src="{{ url_for('static', filename='js/modals/add_project_modal.js') }}"></script>
     <script src="{{ url_for('static', filename='js/projects.js') }}"></script>
 </head>
@@ -21,6 +23,13 @@
                 <li><a href="/materials" class="navbar-link">Materials</a></li>
                 <li><a href="/contacts" class="navbar-link">Contacts</a></li>
             </ul>
+            <div class="navbar-settings">
+                <button class="settings-btn" title="Settings">⚙️</button>
+                <div class="settings-dropdown">
+                    <form method="POST" action="/logout" style="display: none;" id="logout-form"></form>
+                    <button type="submit" form="logout-form" class="dropdown-item">Logout</button>
+                </div>
+            </div>
         </div>
     </nav>
 
