Fix completion toggle

--- a/src/templates/projects.html
+++ b/src/templates/projects.html
@@ -51,7 +51,7 @@
                     <label for="filter-toggle" class="toggle-label">
                         <input type="checkbox" id="filter-toggle" class="toggle-checkbox" {% if current_filter == 'active' %}checked{% endif %}>
                         <span class="toggle-slider"></span>
-                        <span class="toggle-text">Active Only</span>
+                        <span class="toggle-text">Hide Completed</span>
                     </label>
                 </div>
             </div>
